--- a/src/App.css
+++ b/src/App.css
@@ -1,144 +1,64 @@
-.App {
-  text-align: center;
-  justify-items: center;
- 
-}
-.puttoback{
-background-color: black;
-z-index: 10;
-}
-
-
-*{
-  cursor: url("cursor.cur");
-    font-weight: normal;
-  font-style: normal;
- 
- }
-
- img{
-  max-width: 100%;
- }
-
-nav {
-  
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 10vh;
-
-}
-
-.nav-links{
-  background-color: rgba(0, 0, 0);
-font-size: 2vw;
-  width: 40%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-  z-index: 5;
-}
-
-.aboutPage{
-
-  height: 60vw;
-}
-.pageProjects{
-
-  height: 60vw;
-}
-
-.wrapper {
-  
-  background-color: rgb(240, 230, 140);
-}
-
-.color1{
-background-color:rgb(230,76,67);
-}
-.color2{
-  color:rgb(235,109,127);
-}
-.color3{
-color: rgb(234,176,0);
-}
-.color4{
-background-color:rgb(1,143,152) ;
-}
-
-.border0 {
-
-  width: 90%;
-  text-align: center;
-  left: 5%;
-  border: 5px double rgb(12, 162, 175);
-}
-
+@import url(https://indestructibletype.com/fonts/Jost.css);
 .page1 {
-position: relative;
+  position: relative;
   width: 100%;
   height: 56vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .title {
-  padding-top: 30vw;
   text-align: center;
   font-size: 6vw;
   position: fixed;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 .title::first-line {
   z-index: -2;
 }
 
 .title1 {
-  padding-top: 30vw;
   text-align: center;
   font-size: 6vw;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-
   -webkit-text-stroke-width: 0.5vw;
   z-index: 2;
 }
 
+.sketchcss {
+  width: 50%;
+  height: auto;
+}
+
 #defaultCanvas0 {
-  z-index: 1;
   width: 100%;
+  height: auto;
 }
 
+@media screen and (max-width: 1200px) {
+  .page1 {
+    height: 90vw;
+  }
 
+  .title, .title1 {
+    font-size: 10vw;
+  }
+}
+.playContainer {
+  margin: 10vw;
+}
 
-
-
-
-
-
-
-.gifRecordingd {
-  left: 55%;
-  top: 100px;
+.gifRecording {
   position: relative;
-	padding-bottom: 30%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-  width: 30vw;
-}
-.gifRecording{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  
+  left: 5%;
+  top: 10%;
 }
 
 .PlayBox {
-
   position: relative;
   height: 33vw;
 }
@@ -150,76 +70,62 @@ position: relative;
   width: 20vw;
   border-radius: 50%;
   display: inline-block;
-
 }
 
 .play {
-
   z-index: 1;
-
   font-size: 8vw;
   width: 200%;
   text-align: center;
 }
 
-
-
-
 .page3 {
-  position: relative;
   z-index: 4;
-  width: 100%;
-  height: 60vw;
-
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-items: center;
+  padding: 20vw 10vw 20vw 10vw;
 }
-
 
 .aboutDiv {
-  background-color: inherit;
+  height: 40vw;
+  position: relative;
   display: flex;
-width: 50%;
-height: 100%;
-margin: auto;
-
+  flex-direction: row;
 }
-
 
 .aboutGifContainer {
-  position: relative;
-  margin-top: 33%;
-	padding-bottom: 35%; /* 16:9 */
-	padding-top: 25px;
-  width: 450px;
-  height: 150px;
-  
-
-}
-.aboutGif{
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
+.aboutGif {
+  height: 500px;
+  width: 300px;
+}
 
 .aboutpcontainer {
   text-align: left;
-  height: 600px;
-  margin: auto;
-  margin-left: 5%;
   text-transform: uppercase;
-  width: 30vw;
-  font-size: 1.2vw;
+  margin: 50px;
+  width: 100%;
+  height: 100%;
 }
 
-.showMore{
+.showMore {
   display: none;
 }
 
 .button_slide {
-  border: 2px solid rgb(20, 159, 157);
+  border: 2px solid #149f9d;
   border-radius: 0px;
   padding: 18px 36px;
   display: inline-block;
@@ -236,288 +142,382 @@ margin: auto;
   box-shadow: inset 0 0 0 50px black;
 }
 
+@media screen and (max-width: 1200px) {
+  .page3 {
+    flex-direction: column;
+  }
+}
+.aboutGifContainer {
+  margin: auto;
+  width: 90%;
+}
 
+.aboutpcontainer {
+  margin: auto;
+  width: 90%;
+}
 
-
-
-
+@media screen and (max-width: 600px) {
+  .page3 {
+    flex-flow: block;
+  }
+}
 .page4 {
   position: relative;
-  height: 60vw;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
-.projectsDiv h1 {
+.page4 h1 {
   font-size: 5vw;
-  text-align: center;
-  padding-top: 10%;
+  margin: 50px;
 }
 
+.videoContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  height: 500px;
+}
 
-.PVideos {
-  text-align: center;
+.innerVideoContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 10px 4vw 10px 4vw;
+  align-items: center;
+}
 
+.VtextContainer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.VtextContainer p {
+  display: none;
+  margin-right: auto;
+}
+.VtextContainer p:first-of-type {
+  display: flex;
 }
 
 .PVideo {
-  position: relative;
-  padding: -5vw;
-
-
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
+#MPLink {
+  margin: 50px;
+  font-size: 2em;
+}
+
+@media screen and (max-width: 1200px) {
+  .videoContainer {
+    flex-direction: column;
+    justify-content: space-around;
+    width: 85%;
+    height: 900px;
+  }
+}
+.v1:hover p {
+  display: flex;
+}
+
+.v2:hover p {
+  display: flex;
+}
+
+.v3:hover p {
+  display: flex;
+}
+
+.v4:hover p {
+  display: flex;
+}
 
 .borders {
   position: relative;
   width: 90%;
   margin-left: 5%;
-  border: 5px double rgb(12, 162, 175);
+  border: 5px double #0ca2af;
   z-index: 5;
+}
+
+.vBorders {
+  position: relative;
+  width: 99%;
+  border: 5px double #0ca2af;
+  z-index: 5;
+  margin: 0.5vw;
 }
 
 .page5 {
   position: relative;
-  height: 60vw;
-}
-.priceDiv{
-  margin-bottom: 10vw;
-}
-
-.priceDiv h2 {
-  padding-top: 5%;
-  font-size: 10vw;
-  text-align: center;
-}
-
-.priceDiv h4 {
-  margin: 10%;
-  font-size: 2vw;
-  text-align: center;
-
-}
-
-.priceDiv h4::first-line {
-font-size: 3vw;
-
-}
-
-.priceDiv p{
-font-size: 1vw;
-
-}
-
-.dotcontainer{
-  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-z-index: 9;
+  flex-direction: column;
+}
+
+h2 {
+  font-size: 5vw;
+}
+
+.dotcontainer {
+  margin: 5vw;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: 9;
+}
+.dotcontainer .dotInnerContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .dot {
-  margin: 1%;
-
-  text-align: center;
-  line-height: 4.5em;
-  width: 15vw;
-  height: 15vw;
+  width: 400px;
   border-radius: 100%;
-  
-
+  margin: 5vw 1vw 5vw 1vw;
+  text-align: center;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .dot:hover {
-  
-opacity: 90%;
+  opacity: 90%;
+}
+.dot h4 {
+  width: 100%;
+  height: 100%;
+  justify-content: space-evenly;
+  font-size: 1.5em;
+}
+.dot h4:nth-child(1) {
+  font-size: 2em;
+}
+.dot p {
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
+  opacity: 0%;
 }
 
-.addInfo{
-display: none;
+@media screen and (max-width: 1775px) {
+  .dotInnerContainer {
+    flex-direction: column;
+    align-content: space-evenly;
+  }
 
+  .dot {
+    margin: 5vw;
+  }
 }
+@media screen and (max-width: 1025px) {
+  .dotcontainer {
+    flex-direction: column;
+  }
 
+  .dot {
+    margin: 10vw;
+  }
 
+  .dotInnerContainer {
+    margin: 0;
+  }
+}
+.addInfo {
+  display: none;
+}
 
 @keyframes stretch {
   0% {
     border-radius: 100%;
   }
-  
   100% {
-    height: 30vw;
     border-radius: 0px;
-
   }
 }
-@import url(https://indestructibletype.com/fonts/Jost.css);
-
-* 
-.page6{
-position: relative;
-height: 50vw;
-  z-index:3;
+@keyframes fadein {
+  50% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
-
-.page6, .page5, .page4, .page3, .page2 {
-  padding-top: 1px;
- }
-.container {
-  text-align: left;
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
+.border5 {
   position: relative;
+  width: 90%;
+  border: 5px double #0ca2af;
+  z-index: 5;
+  margin: 1vw;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
-
-#contact {
-	padding:25px;
-  margin:50px 0;
-
+.page6 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+.page6 h3 {
+  font-size: 50px;
+}
+.page6 p {
+  font-size: 25px;
 }
 
-#contact h3 {
-  
-	color: #F96;
-	display: block;
-	font-size: 30px;
-	font-weight: 400;
+.container {
+  font-family: jost;
+  height: 100%;
+  max-width: 600px;
+  margin: 20vw auto;
+  padding: 20px 20px 20px 20px;
+  text-align: left;
+  display: flow;
 }
 
-#contact h4 {
-	margin:5px 0 15px;
-	display:block;
-	font-size:13px;
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  resize: vertical;
+  font-family: jost;
 }
 
-fieldset {
-  font-family: "Jost";
-
-	border: medium none !important;
-	margin: 0 0 10px ;
-	min-width: 100%;
-	padding:   0 0;
-	width: 100%;
+input[type=submit], textarea {
+  font-family: jost;
+  height: 100%;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-  padding:10px;
-  font-family: "Jost";
-
+#subject {
+  height: 170px;
 }
 
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-  border:1px solid #AAA;
-  font-family: "Jost";
-
-}
-.input{
-
-  max-width: 90%;
+input[type=submit] {
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  height: 60px;
+  background-color: #00ccff;
+  font-family: jost;
+  color: white;
 }
 
-#contact textarea {
-	height:100px;
-  resize:none;
-  font-family: "Jost";
-
+input[type=submit]:hover {
+  background-color: gold;
 }
 
-#contact button[type="submit"] {
-	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#0CF;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-  font-size:15px;
-  font-family: "Jost";
-
+.projectsDiv .videoContainer {
+  margin: 100px;
 }
 
-#contact button[type="submit"]:hover {
-	background:#09C;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-  transition:background-color 0.3s ease-in-out;
-  font-family: "Jost";
-
+.aboutPage {
+  display: flex;
+  flex-direction: column;
 }
 
-#contact button[type="submit" ]:active {   font-family: "Jost";
-  box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
-
-#contact input:focus, #contact textarea:focus {
-	outline:0;
-  border:1px solid #999;
-  font-family: "Jost";
-
-}
-::-webkit-input-placeholder {
- color:#888;
-}
-:-moz-placeholder {
- color:#888;
-}
-::-moz-placeholder {
- color:#888;
-}
-:-ms-input-placeholder {
- color:#888;
-
+.aboutPageP {
+  align-self: center;
+  margin: 10%;
 }
 
-.fontstyle{
+.App {
+  text-align: center;
+  justify-items: center;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 320px) {
+  .App {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  .App {
+    font-size: 22px;
+  }
+}
+.puttoback {
+  background-color: black;
+  z-index: 10;
+}
+
+* {
+  cursor: url("./cursor.cur");
   font-weight: normal;
   font-style: normal;
 }
 
-
-
-.pagetitle{
-font-size: 10vw;
-text-align: center;
-margin: auto;
-z-index: 4;
+img {
+  max-width: 100%;
 }
 
-.space{
-  margin-bottom: 10vw;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
 }
 
-.center{
-
-  margin: 15vw;
-  text-align: center;
-
-}
-
-
-
-
-
-
-
-
-
-
-button{
-  width: 80px;
-  height: 40px;
-  margin: 15px;
-}
-.blackButton{
+.nav-links {
   background-color: black;
-  color: white;
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  z-index: 5;
 }
 
-.whiteButton{
-  background-color: white;
-  color: black;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: khaki;
 }
+
+.color1 {
+  background-color: #e64c43;
+}
+
+.color2 {
+  color: #eb6d7f;
+}
+
+.color3 {
+  color: #eab000;
+}
+
+.color4 {
+  background-color: #018f98;
+}
+
+.border0 {
+  width: 90%;
+  margin: auto;
+  border: 5px double #0ca2af;
+}
+
+page6, page5, page4, page3, page2 {
+  padding-top: 1px;
+}
+
+/*# sourceMappingURL=App.css.map */
