--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,10 @@
 
 .gifRecording {
   position: relative;
-  left: 5%;
+  margin-left: 30vw;
   top: 10%;
+  width: 30vw;
+  z-index: 0;
 }
 
 .PlayBox {
@@ -174,7 +176,7 @@
 
 .page4 h1 {
   font-size: 5vw;
-  margin: 50px;
+  margin: 10vw;
 }
 
 .videoContainer {
@@ -217,7 +219,7 @@
 }
 
 #MPLink {
-  margin: 50px;
+  margin: 10vw;
   font-size: 2em;
 }
 
@@ -297,9 +299,6 @@ h2 {
   align-items: center;
   justify-content: space-evenly;
 }
-.dot:hover {
-  opacity: 90%;
-}
 .dot h4 {
   width: 100%;
   height: 100%;
@@ -314,6 +313,12 @@ h2 {
   width: 100%;
   height: 100%;
   opacity: 0%;
+}
+
+.dot:hover {
+  opacity: 90%;
+  background-blend-mode: difference;
+  background-color: blue;
 }
 
 @media screen and (max-width: 1775px) {
