--- a/src/Styles/HomePage/_page4.sass
+++ b/src/Styles/HomePage/_page4.sass
@@ -11,7 +11,7 @@
 
 .page4 h1
   font-size: 5vw
-  margin: 50px
+  margin: 10vw
 
 
 .videoContainer
@@ -42,6 +42,7 @@
   p
     display: none 
     margin-right: auto
+    
   p:first-of-type 
     display: flex
 
@@ -55,7 +56,7 @@
   
 
 #MPLink
-  margin: 50px
+  margin: 10vw
   font-size: 2em
 
 
