--- a/src/Styles/HomePage/_page5.sass
+++ b/src/Styles/HomePage/_page5.sass
@@ -30,8 +30,7 @@ h2
   align-items: center
   justify-content: space-evenly
   
-  &:hover
-    opacity: 90%
+
   h4
     width: 100%
     height: 100%
@@ -44,9 +43,14 @@ h2
     width: 100%
     height: 100%
     opacity: 0%
-  
+    
+.dot:hover
+  opacity: 90%
+  background-blend-mode: difference 
+  background-color: blue
 
-  
+
+
 @media screen and (max-width: 1775px)
   .dotInnerContainer
     flex-direction: column
