--- a/src/App.css
+++ b/src/App.css
@@ -110,8 +110,8 @@
 }
 
 .aboutGif {
-  height: 500px;
-  width: 300px;
+  height: 600px;
+  width: 450px;
 }
 
 .aboutpcontainer {
@@ -186,6 +186,7 @@
   align-items: center;
   flex-direction: row;
   height: 500px;
+  margin: 3vw;
 }
 
 .innerVideoContainer {
@@ -263,6 +264,10 @@
   margin: 0.5vw;
 }
 
+* {
+  border: 1px solid black;
+}
+
 .page5 {
   position: relative;
   width: 100%;
@@ -275,7 +280,6 @@
 
 h2 {
   font-size: 5vw;
-  border: 1px solid #000000;
 }
 
 .dotcontainer {
@@ -285,8 +289,10 @@ h2 {
   display: flex;
   z-index: 9;
 }
-.dotcontainer .dotInnerContainer {
+
+.dotInnerContainer {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -303,23 +309,22 @@ h2 {
 .dot h4 {
   width: 100%;
   height: 100%;
-  justify-content: space-evenly;
   font-size: 1.5em;
 }
 .dot h4:nth-child(1) {
   font-size: 2em;
 }
 .dot p {
-  justify-content: space-evenly;
-  width: 100%;
-  height: 100%;
-  opacity: 0%;
+  width: 90%;
+  height: 90%;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0;
 }
 
 .dot:hover {
-  opacity: 90%;
-  background-blend-mode: difference;
-  background-color: blue;
+  opacity: 0.9;
 }
 
 @media screen and (max-width: 1775px) {
@@ -359,10 +364,10 @@ h2 {
 }
 @keyframes fadein {
   50% {
-    opacity: 0%;
+    opacity: 0;
   }
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 .border5 {
