--- a/src/Styles/HomePage/_page4.sass
+++ b/src/Styles/HomePage/_page4.sass
@@ -21,6 +21,7 @@
   align-items: center
   flex-direction: row
   height: 500px
+  margin: 3vw
 
 
 
@@ -39,6 +40,7 @@
   width: 100%
   align-items: center
   justify-content: space-evenly
+  
   p
     display: none 
     margin-right: auto
@@ -52,12 +54,14 @@
   display: flex
   width: 100%
   height: 100%
+
   
   
 
 #MPLink
   margin: 10vw
   font-size: 2em
+  
 
 
 @media screen and (max-width: 1200px)
