--- a/src/Styles/HomePage/_page5.sass
+++ b/src/Styles/HomePage/_page5.sass
@@ -1,3 +1,6 @@
+*
+  border: 1px solid black
+  
 .page5
   position: relative
   width: 100%
@@ -9,7 +12,6 @@
 
 h2
   font-size: 5vw
-  border: 1px solid #000000
 
 .dotcontainer
   margin: 5vw
@@ -17,11 +19,13 @@ h2
   height: 100%
   display: flex
   z-index: 9
-  .dotInnerContainer
-    width: 100%
-    display: flex
-    align-items: center
-    justify-content: space-evenly
+
+.dotInnerContainer
+  width: 100%
+  height: 100%
+  display: flex
+  align-items: center
+  justify-content: space-evenly
 
 .dot
   width: 400px
@@ -35,20 +39,22 @@ h2
   h4
     width: 100%
     height: 100%
-    justify-content: space-evenly
     font-size: 1.5em
   h4:nth-child(1) 
     font-size: 2em
   p 
-    justify-content: space-evenly
-    width: 100%
-    height: 100%
-    opacity: 0%
-    
+    width: 90%
+    height: 90%     
+    justify-content: center
+    margin-left: auto
+    margin-right: auto
+    opacity: 0
+
+
+
+
 .dot:hover
-  opacity: 90%
-  background-blend-mode: difference 
-  background-color: blue
+  opacity: 0.9
 
 
 
@@ -81,10 +87,10 @@ h2
 
 @keyframes fadein
   50%
-    opacity: 0%
+    opacity: 0
 
   100%
-    opacity: 100%
+    opacity: 1
     
     
 .border5
