--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,26 @@
   flex-direction: column;
 }
 
+.PerspectiveTransition1 {
+  visibility: hidden;
+  width: 100%;
+}
+
+.PerspectiveTransition2 {
+  visibility: hidden;
+  width: 100%;
+}
+
+.PerspectiveTransition3 {
+  visibility: hidden;
+  width: 100%;
+}
+
+.PerspectiveTransition4 {
+  visibility: hidden;
+  width: 100%;
+}
+
 .page4 h1 {
   font-size: 5vw;
   margin: 10vw;
@@ -194,10 +214,25 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  margin: 10px 4vw 10px 4vw;
   align-items: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+  animation-timing-function: ease-in;
+  transform-origin: 0 0;
 }
 
+@keyframes TrasitionY {
+  0% {
+    transform: perspective(180px) rotateX(-180deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(-180px) rotateX(180deg) rotateY(0deg);
+  }
+}
 .VtextContainer {
   display: flex;
   flex-direction: row;
@@ -232,6 +267,25 @@
     height: 900px;
   }
 }
+.v1 {
+  width: 27vw;
+  padding-right: 4%;
+}
+
+.v2 {
+  padding-left: 5%;
+  width: 30vw;
+}
+
+.v3 {
+  padding-right: 2%;
+  width: 40vw;
+}
+
+.v4 {
+  width: 25vw;
+}
+
 .v1:hover p {
   display: flex;
 }
@@ -264,10 +318,26 @@
   margin: 0.5vw;
 }
 
-* {
-  border: 1px solid black;
-}
+@media screen and (max-width: 1200px) {
+  .v1 {
+    width: 100%;
+    padding-right: 0;
+  }
 
+  .v2 {
+    padding-left: 0;
+    width: 100%;
+  }
+
+  .v3 {
+    padding-right: 0;
+    width: 100%;
+  }
+
+  .v4 {
+    width: 100%;
+  }
+}
 .page5 {
   position: relative;
   width: 100%;
