--- a/src/Styles/HomePage/_page4.sass
+++ b/src/Styles/HomePage/_page4.sass
@@ -7,11 +7,25 @@
   align-items: center
   flex-direction: column
 
+.PerspectiveTransition1
+  visibility: hidden
+  width: 100%
 
 
+.PerspectiveTransition2
+  visibility: hidden
+  width: 100%
+
+.PerspectiveTransition3
+  visibility: hidden
+  width: 100%
+.PerspectiveTransition4
+  visibility: hidden
+  width: 100%
 .page4 h1
   font-size: 5vw
   margin: 10vw
+ 
 
 
 .videoContainer
@@ -31,8 +45,29 @@
   flex-direction: column
   width: 100%
   height: 100%
-  margin: 10px 4vw 10px 4vw
   align-items: center
+  transition: transform 0.8s
+  transform-style: preserve-3d
+  backface-visibility: hidden
+  animation-duration: 1.5s
+  animation-fill-mode: forwards
+  animation-play-state: running
+  animation-timing-function: ease-in
+  transform-origin: 0 0
+
+
+@keyframes TrasitionY
+  0% 
+
+    transform: perspective(180px)     rotateX(-180deg) rotateY(0deg)
+  100% 
+    
+    transform: perspective(-180px)     rotateX(180deg) rotateY(0deg)
+
+
+
+
+
 
 .VtextContainer
   display: flex
@@ -55,6 +90,7 @@
   width: 100%
   height: 100%
 
+
   
   
 
@@ -63,7 +99,6 @@
   font-size: 2em
   
 
-
 @media screen and (max-width: 1200px)
   .videoContainer
     flex-direction: column
@@ -71,12 +106,22 @@
     width: 85%
     height: 900px
 
-  
-    
-    
+
+.v1
+  width: 27vw
+  padding-right: 4% 
+.v2
+  padding-left: 5%    
+  width: 30vw
+.v3
+  padding-right: 2%
+  width: 40vw
+.v4
+  width: 25vw
 .v1:hover 
   p 
    display: flex
+
 
 .v2:hover 
   p 
@@ -105,6 +150,21 @@
   border: 5px double rgb(12, 162, 175)
   z-index: 5
   margin: 0.5vw
+
+
+
+
   
 
-
+@media screen and (max-width: 1200px)
+  .v1
+    width: 100%
+    padding-right: 0
+  .v2
+    padding-left: 0    
+    width: 100%
+  .v3
+    padding-right: 0
+    width: 100%
+  .v4
+    width: 100%
