--- a/src/App.sass
+++ b/src/App.sass
@@ -21,10 +21,61 @@
   z-index: 10
 
 *
-  cursor: url("./cursor.cur")
+  -moz-user-select: none
+  -khtml-user-select: none
+  -webkit-user-select: none
+  -ms-user-select: none
+  user-select: none
   font-weight: normal
   font-style: normal
+  cursor: none
+
   
+:root
+  --color-cursor: 220, 90, 90
+  --cursor-outline-shade: 0.5
+  --cursor-size: 120px
+  --cursor-outline-size: 1552px
+
+.cursorOuter
+  opacity: 0.8
+
+.cursorInner
+  opacity: 0.8
+
+.cursor-dot
+  z-index: 999
+  pointer-events: none
+  position: absolute
+  top: 50%
+  left: 50%
+  border-radius: 50%
+  opacity: 0
+  transform: translate(-50%, -50%)
+  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out
+
+.cursor-dot-outline 
+  z-index: 999
+  pointer-events: none
+  position: absolute
+  top: 50%
+  left: 50%
+  border-radius: 50%
+  opacity: 0
+  transform: translate(-50%, -50%)
+  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out
+
+
+.cursor-dot 
+  width: var(--cursor-size)
+  height: var(--cursor-size)
+  background-color: rgba(var(--color-cursor), 1)
+
+
+.cursor-dot-outline 
+  width: var(--cursor-outline-size)
+  height: var(--cursor-outline-size)
+  background-color: rgba(var(--color-cursor), var(--cursor-outline-shade))
 
 
 img
@@ -51,6 +102,20 @@ nav
   min-height: 100vh
   background-color: rgb(240, 230, 140)
 
+
+$color1: rgb(230, 76, 67)
+$color2: rgb(235, 109, 127)
+$color3:rgb(234, 176, 0)
+$color4:rgb(1, 143, 152)
+
+:export 
+    color1: $color1
+    color2: $color2
+    color3: $color3
+    color4: $color4
+
+
+
 .color1
   background-color: rgb(230, 76, 67)
 
@@ -62,6 +127,9 @@ nav
 
 .color4
   background-color: rgb(1, 143, 152)
+
+.color5
+  background-color: rgb(234, 176, 0)
 
 .border0
   width: 90%
