--- a/src/Styles/HomePage/_page3.sass
+++ b/src/Styles/HomePage/_page3.sass
@@ -1,3 +1,5 @@
+
+
 .page3
   z-index: 4
   position: relative
@@ -46,8 +48,7 @@
   display: inline-block
   font-size: 14px
   letter-spacing: 1px
-  cursor: pointer
-  box-shadow: inset 0 0 0 0 black
+  box-shadow: inset 0 0 0 0 rgb(1, 143, 152)
   -webkit-transition: ease-out 0.4s
   -moz-transition: ease-out 0.4s
   transition: ease-out 0.4s
@@ -55,7 +56,7 @@
 @media screen and (max-width: 1450px)
 
 .slide_left:hover
-  box-shadow: inset 0 0 0 50px black
+  box-shadow: inset 0 0 0 50px white
 
 @media screen and (max-width: 1200px)
   .page3
