--- a/src/Styles/HomePage/_page5.sass
+++ b/src/Styles/HomePage/_page5.sass
@@ -93,7 +93,7 @@ h2
     
     
 .border5
-  position: relative
+  position: flex
   width: 90%
   border: 5px double rgb(12, 162, 175)
   z-index: 5
