--- a/src/App.css
+++ b/src/App.css
@@ -261,9 +261,12 @@
 @media screen and (max-width: 1200px) {
   .videoContainer {
     flex-direction: column;
-    justify-content: space-around;
-    width: 85%;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
     height: 900px;
+    margin: 0;
+    padding: 0;
   }
 }
 .v1 {
@@ -440,7 +443,7 @@ h2 {
   }
 }
 .border5 {
-  position: relative;
+  position: flex;
   width: 90%;
   border: 5px double #0ca2af;
   z-index: 5;
@@ -464,7 +467,7 @@ h2 {
   font-family: jost;
   height: 100%;
   max-width: 600px;
-  margin: 20vw auto;
+  margin: 7vw auto;
   padding: 20px 20px 20px 20px;
   text-align: left;
   display: flow;
@@ -535,11 +538,6 @@ input[type=submit]:hover {
     font-size: 22px;
   }
 }
-.puttoback {
-  background-color: black;
-  z-index: 10;
-}
-
 * {
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -566,61 +564,41 @@ input[type=submit]:hover {
   opacity: 0.8;
 }
 
-.cursor-dot {
-  z-index: 999;
-  pointer-events: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border-radius: 50%;
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
-}
-
-.cursor-dot-outline {
-  z-index: 999;
-  pointer-events: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border-radius: 50%;
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
-}
-
-.cursor-dot {
-  width: var(--cursor-size);
-  height: var(--cursor-size);
-  background-color: rgba(var(--color-cursor), 1);
-}
-
-.cursor-dot-outline {
-  width: var(--cursor-outline-size);
-  height: var(--cursor-outline-size);
-  background-color: rgba(var(--color-cursor), var(--cursor-outline-shade));
-}
-
 img {
   max-width: 100%;
 }
 
+.puttoback {
+  z-index: 10;
+  height: 5px;
+  display: flex;
+}
+
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  min-height: 10vh;
 }
 
 .nav-links {
-  background-color: black;
-  width: 40%;
+  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   list-style: none;
-  z-index: 5;
+  z-index: 9;
+  position: fixed;
+  height: 50px;
+  background-color: white;
+}
+
+.mainborder {
+  z-index: 9;
+  position: fixed;
+  transform: translateY(-45px);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
 }
 
 .wrapper {
