--- a/src/App.sass
+++ b/src/App.sass
@@ -16,9 +16,7 @@
     font-size: 22px
 
 
-.puttoback
-  background-color: black
-  z-index: 10
+
 
 *
   -moz-user-select: none
@@ -43,58 +41,41 @@
 .cursorInner
   opacity: 0.8
 
-.cursor-dot
-  z-index: 999
-  pointer-events: none
-  position: absolute
-  top: 50%
-  left: 50%
-  border-radius: 50%
-  opacity: 0
-  transform: translate(-50%, -50%)
-  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out
-
-.cursor-dot-outline 
-  z-index: 999
-  pointer-events: none
-  position: absolute
-  top: 50%
-  left: 50%
-  border-radius: 50%
-  opacity: 0
-  transform: translate(-50%, -50%)
-  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out
-
-
-.cursor-dot 
-  width: var(--cursor-size)
-  height: var(--cursor-size)
-  background-color: rgba(var(--color-cursor), 1)
-
-
-.cursor-dot-outline 
-  width: var(--cursor-outline-size)
-  height: var(--cursor-outline-size)
-  background-color: rgba(var(--color-cursor), var(--cursor-outline-shade))
-
 
 img
   max-width: 100%
 
+
+.puttoback
+  z-index: 10
+  height: 5px
+  display: flex
+
 nav
   display: flex
-  justify-content: space-around
+  justify-content: space-evenly
   align-items: center
-  min-height: 10vh
+
+  
 
 .nav-links
-  background-color: rgb(0, 0, 0)
-  width: 40%
+  width: 100%
   display: flex
-  justify-content: space-around
+  justify-content: center
   align-items: center
   list-style: none
-  z-index: 5
+  z-index: 9
+  position: fixed
+  height: 50px
+  background-color: white
+  
+.mainborder
+  z-index: 9
+  position: fixed
+  transform: translateY(-45px)
+  -webkit-transition: ease-out 0.4s
+  -moz-transition: ease-out 0.4s
+  transition: ease-out 0.4s
 
 .wrapper
   display: flex
