--- a/src/Styles/HomePage/_page4.sass
+++ b/src/Styles/HomePage/_page4.sass
@@ -102,10 +102,15 @@
 @media screen and (max-width: 1200px)
   .videoContainer
     flex-direction: column
-    justify-content: space-around
-    width: 85%
+    justify-content: center
+    align-content: center
+    width: 100%
     height: 900px
+    margin: 0
+    padding: 0
 
+@media screen and (max-width: 700px)
+  .videoContainer
 
 .v1
   width: 27vw
