--- a/src/App.css
+++ b/src/App.css
@@ -269,6 +269,11 @@
     padding: 0;
   }
 }
+@media screen and (max-width: 700px) {
+  .videoContainer {
+    max-width: 90vw;
+  }
+}
 .v1 {
   width: 27vw;
   padding-right: 4%;
@@ -359,7 +364,7 @@ h2 {
   width: 100%;
   height: 100%;
   display: flex;
-  z-index: 9;
+  z-index: 6;
 }
 
 .dotInnerContainer {
@@ -556,12 +561,8 @@ input[type=submit]:hover {
   --cursor-outline-size: 1552px;
 }
 
-.cursorOuter {
-  opacity: 0.8;
-}
-
-.cursorInner {
-  opacity: 0.8;
+cursorall {
+  background-blend-mode: difference;
 }
 
 img {
