--- a/src/App.sass
+++ b/src/App.sass
@@ -28,6 +28,7 @@
   font-style: normal
   cursor: none
 
+
   
 :root
   --color-cursor: 220, 90, 90
@@ -35,11 +36,10 @@
   --cursor-size: 120px
   --cursor-outline-size: 1552px
 
-.cursorOuter
-  opacity: 0.8
 
-.cursorInner
-  opacity: 0.8
+
+cursorall
+  background-blend-mode: difference
 
 
 img
