--- a/src/Styles/HomePage/_page3.sass
+++ b/src/Styles/HomePage/_page3.sass
@@ -30,6 +30,8 @@
   height: 600px
   width: 450px
 
+
+
 .aboutpcontainer
   text-align: left
   text-transform: uppercase
@@ -71,3 +73,7 @@
 @media screen and (max-width: 600px)
   .page3
     flex-flow: block
+
+  .aboutGif
+    height: 80vw
+    width: 60vw
