Fully Responsive bug fix

--- a/src/Styles/HomePage/_page5.sass
+++ b/src/Styles/HomePage/_page5.sass
@@ -34,6 +34,7 @@ h2
   align-items: center
   justify-content: space-evenly
   
+  
 
   h4
     width: 100%
@@ -72,6 +73,9 @@ h2
   .dotInnerContainer
     margin: 0
 
+@media screen and (max-width: 400px)
+   .dot
+    width: 100%
 
 
 .addInfo
