--- a/src/App.css
+++ b/src/App.css
@@ -432,6 +432,11 @@ h2 {
     margin: 0;
   }
 }
+@media screen and (max-width: 400px) {
+  .dot {
+    width: 100%;
+  }
+}
 .addInfo {
   display: none;
 }
@@ -536,6 +541,7 @@ input[type=submit]:hover {
   text-align: center;
   justify-items: center;
   font-size: 16px;
+  width: 100%;
 }
 
 @media screen and (min-width: 320px) {
@@ -574,6 +580,7 @@ img {
   z-index: 10;
   height: 5px;
   display: flex;
+  width: 100%;
 }
 
 nav {
@@ -583,7 +590,6 @@ nav {
 }
 
 .nav-links {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -592,6 +598,7 @@ nav {
   position: fixed;
   height: 50px;
   background-color: white;
+  width: 100%;
 }
 
 .mainborder {
